# libigl-unit-tests

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  Settings.cmake  test_common.h
cmake/: FindLIBIGL.cmake
include/igl/: CMakeLists.txt  bbw.cpp  boundary_loop.cpp  cotmatrix.cpp  cotmatrix_entries.cpp  decimate.cpp  doublearea.cpp  edge_flaps.cpp  edge_lengths.cpp  is_edge_manifold.cpp  list_to_matrix.cpp  marching_tets.cpp  qslim.cpp  slice.cpp  slice_into.cpp  sort.cpp  unique.cpp  upsample.cpp
include/igl/bbw/: CMakeLists.txt  bbw.cpp
include/igl/boolean/: CSGTree.cpp
include/igl/cgal/: is_inside.cpp  order_facets_around_edges.cpp  outer_facet.cpp  outer_hull.cpp  peel_outer_hull_layers.cpp  points_inside_component.cpp  remesh_self_intersections.cpp
include/igl/copyleft/boolean/: CMakeLists.txt  mesh_boolean.cpp
include/igl/copyleft/cgal/: CMakeLists.txt  order_facets_around_edges.cpp  peel_outer_hull_layers.cpp
include/igl/copyleft/tetgen/: tetrahedralize.cpp
include/igl/mosek/: CMakeLists.txt
scripts/: new.sh
